--- a/bosh-components.html.md.erb
+++ b/bosh-components.html.md.erb
@@ -100,4 +100,4 @@ This example shows how components interact when creating a new VM.
 1. The Agent uses the IP addresses and IDs to configure the VM.
 
 ---
-Next: [Creating an environment](init.html)
+Next: [Create an environment](init.html)
