--- a/init-azure.html.md.erb
+++ b/init-azure.html.md.erb
@@ -73,4 +73,4 @@ To prepare your Azure environment find out and/or create any missing resources i
 ---
 [Back to Table of Contents](index.html#install)
 
-Previous: [Creating an environment](init.html)
+Previous: [Create an environment](init.html)
