--- a/init-external-ip.html.md.erb
+++ b/init-external-ip.html.md.erb
@@ -1,5 +1,5 @@
 ---
-title: Exposing Director on a public IP
+title: Expose Director on a public IP
 ---
 
 It's strongly recommended to not allow ingress traffic to the Director VM via public IP. One way to achieve that is to use a [jumpbox](terminology.html#jumpbox) to access internal networks. 
