--- a/init-openstack.html.md.erb
+++ b/init-openstack.html.md.erb
@@ -195,4 +195,4 @@ You must create and configure two Security Groups to restrict incoming network t
 ---
 [Back to Table of Contents](index.html#install)
 
-Previous: [Creating an environment](init.html)
+Previous: [Create an environment](init.html)
