--- a/init-softlayer.html.md.erb
+++ b/init-softlayer.html.md.erb
@@ -90,4 +90,4 @@ VLANs provide the ability to partition devices and subnets on the network. To or
 ---
 [Back to Table of Contents](index.html#install)
 
-Previous: [Creating an environment](init.html)
+Previous: [Create an environment](init.html)
