--- a/init-vsphere.html.md.erb
+++ b/init-vsphere.html.md.erb
@@ -73,4 +73,4 @@ This document shows how to set up new [environment](terminology.html#environment
 ---
 [Back to Table of Contents](index.html#install)
 
-Previous: [Creating an environment](init.html)
+Previous: [Create an environment](init.html)
