--- a/uploading-stemcells.html.md.erb
+++ b/uploading-stemcells.html.md.erb
@@ -1,12 +1,12 @@
 ---
-title: Uploading Stemcells
+title: Upload Stemcells
 ---
 
-<p class="note">Note: Applies to CLI v2.</p>
+<p class="note">Note: Document uses CLI v2.</p>
 
 (See [What is a Stemcell?](stemcell.html) for an introduction to stemcells.)
 
-As described earlier, each resource pool references a specific stemcell on the Director. Before the Director can form a deployment, all referenced stemcells must be uploaded to the Director.
+As described earlier, each deployment can reference one or more stemcells. For a deploy to succeed, necessary stemcells must be uploaded to the Director.
 
 ## <a id='find'></a> Finding Stemcells
 
@@ -15,18 +15,18 @@ The [stemcells section of bosh.io](http://bosh.io/stemcells) lists official stem
 ---
 ## <a id='upload'></a> Uploading to the Director
 
-Assuming the CLI is already targeted at the Director, the CLI provides a single command to upload a stemcell.
+CLI provides [`bosh upload-stemcell` command](cli-v2.html#upload-stemcell).
 
 - If you have a URL to a stemcell tarball (for example URL provided by bosh.io):
 
     <pre class="terminal">
-    $ bosh upload-stemcell URL --sha1 SHA1
+    $ bosh -e vbox upload-stemcell https://bosh.io/d/stemcells/bosh-warden-boshlite-ubuntu-trusty-go_agent?v=3421.9 --sha1 1396d7877204e630b9e77ae680f492d26607461d
     </pre>
 
 - If you have a stemcell tarball on your local machine:
 
     <pre class="terminal">
-    $ bosh upload-stemcell ~/Downloads/bosh-stemcell-3421.4-warden-boshlite-ubuntu-trusty-go_agent.tgz
+    $ bosh upload-stemcell ~/Downloads/bosh-stemcell-3421.9-warden-boshlite-ubuntu-trusty-go_agent.tgz
     </pre>
 
 Once the command succeeds you can view all uploaded stemcells in the Director:
@@ -36,7 +36,7 @@ $ bosh -e vbox stemcells
 Using environment '192.168.50.6' as client 'admin'
 
 Name                                         Version  OS             CPI  CID
-bosh-warden-boshlite-ubuntu-trusty-go_agent  3421.4*  ubuntu-trusty  -    6c9c002e-bb46-4838-4b73-ff1afaa0aa21
+bosh-warden-boshlite-ubuntu-trusty-go_agent  3421.9*  ubuntu-trusty  -    6c9c002e-bb46-4838-4b73-ff1afaa0aa21
 
 (*) Currently deployed
 
@@ -58,6 +58,6 @@ stemcells:
 ```
 
 ---
-Next: [Uploading Releases](uploading-releases.html)
+Next: [Upload Releases](uploading-releases.html)
 
-Previous: [Deployment Basics](deployment-basics.html)
+Previous: [Build Deployment Manifest](deployment-basics.html)
