--- a/windows-sample-release.html.md.erb
+++ b/windows-sample-release.html.md.erb
@@ -91,7 +91,7 @@ $ bosh upload-release
 $ bosh -d sample-windows-deployment deploy manifest.yml
 </pre>
 
-For information about deployment basics, see the [Basic Workflow](basic-workflow.html) documenation.
+For information about deployment basics, see the [Deploy Workflow](basic-workflow.html) documenation.
 
 Here is a sample manifest. For information on manifest basics, see the [Deployment Manifest](deployment-manifest.html) documentation.
 
