--- a/init-aws.html.md.erb
+++ b/init-aws.html.md.erb
@@ -185,4 +185,4 @@ Your AWS credentials consist of an Access Key ID and a Secret Access Key. Follow
 ---
 [Back to Table of Contents](index.html#install)
 
-Previous: [Creating an environment](init.html)
+Previous: [Create an environment](init.html)
