--- a/init-google.html.md.erb
+++ b/init-google.html.md.erb
@@ -53,4 +53,4 @@ This document shows how to initialize new [environment](terminology.html#environ
 ---
 [Back to Table of Contents](index.html#install)
 
-Previous: [Creating an environment](init.html)
+Previous: [Create an environment](init.html)
