--- a/terminology.html.md.erb
+++ b/terminology.html.md.erb
@@ -18,13 +18,17 @@ A process that runs continuously on each VM that BOSH deploys (one Agent process
 
 bosh-init is tool used for creating and updating the Director (its VM and persistent disk) in an environment. It is superseded by CLI v2's `bosh create-env` and `bosh delete-env` commands.
 
+## <a id="bosh-lite"></a> BOSH Lite
+
+BOSH Lite is a Director VM that is configured to use Warden CPI, which emulates VMs with containers. It's typically installed locally with VirtualBox; however, it could also be installed onto any cloud BOSH supports. [See usage details](bosh-lite.html)
+
 ## <a id="canary"></a> Canary (Instance)
 
 Canary instances are first instances updated within an instance group. Any update error in a canary instance causes the deployment to stop. Since only canaries are affected before an update stops, problem jobs and packages are prevented from taking over all instances.
 
 ## <a id="cli"></a> CLI (v1)
 
-The BOSH Command Line Interface (CLI) is what you use to run BOSH commands. You must [install](./bosh-cli.html) the CLI to use BOSH. Run `bosh help --all` to view the help. It is superseded by CLI v2.
+The BOSH Command Line Interface (CLI) is what you use to run BOSH commands. You must [install](bosh-cli.html) the CLI to use BOSH. Run `bosh help --all` to view the help. It is superseded by CLI v2.
 
 ## <a id="cli-v2"></a> CLI v2
 
@@ -56,7 +60,7 @@ BOSH deploys software to the cloud using a deployment manifest, one or more stem
 
 ## <a id="deployment"></a> Deployment
 
-An encapsulation of software and configuration that BOSH can deploy to the cloud. You can think of a deployment as the state of a collection of VMs: what software is on them, what resources they use, and how these are orchestrated. Even though BOSH creates the deployment using ephemeral resources, the deployment is stable in that BOSH re-creates VMs that fail and otherwise works to keep your software running. BOSH also manages persistent disks so that state (for example, database data files) can survive when BOSH re-creates a VM. A particular combination of manifest, stemcell, and release is portable across different kinds of cloud infrastructure (that is, across different CPIs) with minimal changes to the manifest.
+An encapsulation of software and configuration that BOSH can deploy to the cloud. You can think of a deployment as the state of a collection of VMs: what software is on them, what resources they use, and how these are orchestrated. Even though BOSH creates the deployment using ephemeral resources, the deployment is stable in that BOSH re-creates VMs that fail and otherwise works to keep your software running. BOSH also manages persistent disks so that state (for example, database data files) can survive when VMs are re-created. Combination of a deployment manifest, stemcells, and releases is portable across different clouds with minimal changes to the deployment manifest. See [What is a Deployment?](deployment.html).
 
 ## <a id="director"></a> Director
 
@@ -80,7 +84,7 @@ Disk type is a named disk configuration specified in the cloud config. [See usag
 
 ## <a id="environment"></a> Environment
 
-A single environment consists of a Director and deployments that it orchestrates. A good example of two separate environments are staging and production environments.
+An environment consists of a Director and deployments that it orchestrates. A good example of two separate environments are staging and production environments.
 
 ## <a id="errand"></a> Errand
 
@@ -109,7 +113,7 @@ An instance corresponds to a single VM that performs specific jobs. Each instanc
 
 ## <a id="instance-group"></a> Instance Group (previously known as Deployment Job)
 
-An instance group is a collection of instances tasked to perform same jobs. Each instance group has an associated VM type, persistent disk type, a stemcell and a set of jobs. Instance groups are configured in the manifest.
+An instance group is a collection of instances tasked to perform same jobs. Each instance group has an associated VM type, persistent disk type, a stemcell and a set of jobs. Instance groups are configured in the deployment manifest.
 
 ## <a id="instance-lifecycle"></a> Instance Lifecycle
 
@@ -129,7 +133,7 @@ A VM that acts as a single access point for the Director and deployed VMs. For r
 
 ## <a id="manifest"></a> Deployment manifest (or just manifest)
 
-A YAML file that identifies one or more release, one or more stemcells and specifies how to configure them for a given deployment.
+A YAML file that identifies one or more releases, stemcells and specifies how to configure them for a given deployment.
 
 ## <a id="operator"></a> Operator
 
@@ -153,11 +157,11 @@ A package is part of a release. It contains vendored in software source and scri
 
 ## <a id="persistent-disk"></a> Persistent Disk
 
-A persistent disk is a disk created in the cloud and associated with a specific instance. While instance's associated VM is recreated, same persistent disk will be reattached. [See usage details](persistent-disks.html).
+A persistent disk is a disk created in the cloud and associated with a specific [instance](terminology.html#instance). While instance's associated VM is recreated, same persistent disk will be reattached. [See usage details](persistent-disks.html).
 
 ## <a id="release"></a> Release
 
-A collection of configuration files, source code, jobs, packages and accompanying information needed to make a software component deployable by BOSH. A self-contained release should have no dependencies that need to be fetched from the internet.
+A collection of configuration files, source code, jobs, packages and accompanying information needed to make a software component deployable by BOSH. A self-contained release should have no dependencies that need to be fetched from the internet. See [What is a Release?](release.html).
 
 ## <a id="resource-pool"></a> Resource Pool
 
@@ -169,7 +173,7 @@ The runtime config is a YAML file that defines global configuration used by the 
 
 ## <a id="stemcell"></a> Stemcell
 
-A generic VM image that BOSH clones and configures to during deployment. A stemcell is a template from which BOSH creates whatever VMs are needed for a wide variety of components and products.
+A generic VM image that BOSH clones and configures to during deployment. A stemcell is a template from which BOSH creates whatever VMs are needed for a wide variety of components and products. See [What is a Stemcell?](stemcell.html).
 
 ## <a id="team"></a> Team
 
