--- a/bosh-lite.html.md.erb
+++ b/bosh-lite.html.md.erb
@@ -21,26 +21,26 @@ Follow below steps to get it running on locally on VirtualBox:
 
     Known working version:
 
-    ```
+    <pre class="terminal">
     $ VBoxManage --version
     5.1...
-    ```
+    </pre>
 
     Note: If you encounter problems with VirtualBox networking try installing [Oracle VM VirtualBox Extension Pack](https://www.virtualbox.org/wiki/Downloads) as suggested by [Issue 202](https://github.com/cloudfoundry/bosh-lite/issues/202). Alternatively make sure you are on VirtualBox 5.1+ since previous versions had a [network connectivity bug](https://github.com/concourse/concourse-lite/issues/9).
 
 1. Install Director VM
 
-    ```
+    <pre class="terminal">
     $ git clone https://github.com/cloudfoundry/bosh-deployment ~/workspace/bosh-deployment
 
     $ mkdir -p ~/deployments/vbox
 
     $ cd ~/deployments/vbox
-    ```
+    </pre>
 
     Below command will try automatically create/enable Host-only network 192.168.50.0/24 ([details](https://github.com/cppforlife/bosh-virtualbox-cpi-release/blob/master/docs/networks-host-only.md)) and NAT network 'NatNetwork' with DHCP enabled ([details](https://github.com/cppforlife/bosh-virtualbox-cpi-release/blob/master/docs/networks-nat-network.md)).
 
-    ```
+    <pre class="terminal">
     $ bosh create-env ~/workspace/bosh-deployment/bosh.yml \
       --state ./state.json \
       -o ~/workspace/bosh-deployment/virtualbox/cpi.yml \
@@ -54,19 +54,19 @@ Follow below steps to get it running on locally on VirtualBox:
       -v internal_gw=192.168.50.1 \
       -v internal_cidr=192.168.50.0/24 \
       -v outbound_network_name=NatNetwork
-    ```
+    </pre>
 
 1. Alias and log into the Director
 
-    ```
+    <pre class="terminal">
     $ bosh alias-env vbox -e 192.168.50.6 --ca-cert <(bosh int ./creds.yml --path /director_ssl/ca)
     $ export BOSH_CLIENT=admin
     $ export BOSH_CLIENT_SECRET=`bosh int ./creds.yml --path /admin_password`
-    ```
+    </pre>
 
 1. Confirm that it works
 
-    ```
+    <pre class="terminal">
     $ bosh -e vbox env
     Using environment '192.168.56.6' as '?'
 
@@ -74,7 +74,7 @@ Follow below steps to get it running on locally on VirtualBox:
     User: admin
 
     Succeeded
-    ```
+    </pre>
 
 ---
 ## <a id="deploy"></a> Deploy example Zookeeper deployment
@@ -83,30 +83,30 @@ Run through quick steps below or follow [deploy workflow](basic-workflow.html) t
 
 1. Update cloud config
 
-    ```
+    <pre class="terminal">
     $ bosh -e vbox update-cloud-config ~/workspace/bosh-deployment/warden/cloud-config.yml
-    ```
+    </pre>
 
 1. Upload stemcell
 
-    ```
+    <pre class="terminal">
     $ bosh -e vbox upload-stemcell https://bosh.io/d/stemcells/bosh-warden-boshlite-ubuntu-trusty-go_agent?v=3421.9 \
       --sha1 1396d7877204e630b9e77ae680f492d26607461d
-    ```
+    </pre>
 
 1. Deploy example deployment
 
-    ```
+    <pre class="terminal">
     $ bosh -e vbox -d zookeeper deploy <(wget -O- https://raw.githubusercontent.com/cppforlife/zookeeper-release/master/manifests/zookeeper.yml)
-    ```
+    </pre>
 
 1. Optionally, set up a local route for `bosh ssh` command
 
-    ```
+    <pre class="terminal">
     $ sudo route add -net 10.244.0.0/16    192.168.50.6 # Mac OS X
     $ sudo route add -net 10.244.0.0/16 gw 192.168.50.6 # Linux
     $ route add           10.244.0.0/16    192.168.50.6 # Windows
-    ```
+    </pre>
 
 1. In case you need to SSH into the Director VM, see [Jumpbox user](jumpbox-user.md).
 
